tests-integration/tests/roundtrip/invalid/input.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/input.essence:1:10:
  |
1 | find x : string
  |          ^^^^^^
Error: Symbol not found "string"

